tests/fixtures/valid/semantic_ok/var_reassignment.pine
//@version=6
indicator("Reassign")
var float x = close
x := x + 1
plot(x)
