tests/fixtures/invalid/semantic/unknown_variable.pine
//@version=6
indicator("x")
y = missingValue + 1
plot(y)
